# Planting-Optimisation-Tool

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Tasklist.md  package-lock.json  render.yaml
backend/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  ERD.md  Makefile  README.md  SCHEMA.md  TEST_database_current_state.sql  alembic.ini  command_references_doc.md  docker-compose.yml  justfile  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 08144ce28c39_initial_schema.py  2025_12_19_1902-default_farm_attributes_coastal_-38c9de0fe996.py  2025_12_22_1856-enable_postgis_extensions-e3c7a8f2b1d9.py  2025_12_22_1857-initial_creation-160313f63d58.py  2025_12_22_2047-changed_ph_max_from_7_0_6_5-a21b8babef99.py  2025_12_24_1424-manual_rename_required-c0c7081f210c.py  2026_01_09_0004-added_parameters_table_per_dwstephens-5113e544bbcc.py  2026_01_19_0010-exclusion_rules_nullable_while_wip-129c3cca06b2.py  2026_03_23_2357-add_auth_tokens_and_user_verification-5e246cf12e0c.py  2026_03_25_1617-add_planting_estimates_table-95225d4be25d.py  2026_03_28_1203-add_dem_table-ceabc24ba301.py  2026_03_28_1951-removing_unique_user_names_email_is_-2d5aae317afd.py  2026_03_29_2352-create_waterways_table-a7c7bc65cef4.py  2026_03_30_1416-merge_dem_table_migration_with_existing_-2ab1fb393773.py  2026_04_01_1000-merge_waterways_with_existing_head-5f7393003635.py  2026_04_03_1630-add_species_exclusion_rules_table-2a53af31ea2e.py  2026_04_03_1646-add_species_dependency_table-2c230e5a4440.py  2026_04_15_0001-add_imputation_flags_to_farms-f4746a1d68d7.py  2026_04_24_1633-add_soil_ph_table-d01f4ba0e99b.py  2026_04_27_1900-add_soil_texture_spatial_table-febd9265a636.py  2026_04_29_0125-merge_heads-076b5e30a1a2.py  2026_05_01_1603-add_global_weights_tables-aee157e85e9c.py  2026_05_06_0916-merges_heads_after_branch_merge-65bddf16ae44.py  465f8691a2ae_convert_species_soil_texture_from_1_m_.py
backend/docs/: database-migration-workflow.md
backend/init-db/: 01-remove-extensions.sql
backend/locust/: locustfile.py
backend/src/: cache.py  config.py  database.py  dependencies.py  generate_erd.py  generate_schema.py  main.py  print_schema.py
backend/src/domains/: environmental_profile.py  reporting.py  sapling_estimation.py  suitability_scoring.py  survivability.py  tree_growth.py
backend/src/models/: __init__.py  agroforestry_type.py  association.py  audit_log.py  auth_token.py  boundaries.py  dem_table.py  exclusion_rules.py  farm.py  global_weights.py  parameters.py  planting_estimates.py  recommendations.py  soil_ph.py  soil_texture.py  soil_texture_spatial.py  species.py  user.py  waterways.py
backend/src/routers/: ahp.py  auth.py  batch_estimation.py  environmental_profile.py  farm.py  global_weights.py  parameters.py  recommendation.py  reporting.py  sapling_estimation.py  soil_texture.py  species.py  user.py
backend/src/schemas/: auth.py  batch_estimation.py  constants.py  environmental_profile.py  epi.py  exclusion_rules.py  farm.py  (+7 more)
backend/tests/: conftest.py  test_ahp_router.py  test_ahp_service.py  test_audit_logging.py  test_auth.py  test_auth_items.py  test_batch_router.py  test_batch_service.py  test_connectivity.py  test_environmental_profile.py  test_environmental_profile_router.py  test_environmental_profile_service.py  test_farm_router.py  test_ingestion_integrity.py  test_parameters_router.py  test_rate_limiting.py  test_recommendation_router.py  test_reporting_export.py  test_reporting_router.py  test_riparian.py  test_roles.py  test_sapling_router.py  test_sapling_service.py  test_schema_integrity.py  test_species_router.py  test_validation.py
datascience/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
datascience/config/: exclusion_config.json  recommend.yaml
datascience/data/: farms.csv  farms.xlsx  farms_cleaned.csv  farms_cleaned.xlsx  species.csv  species.xlsx  species_params.csv  species_params.xlsx
datascience/docs/: ahp_theory.md  ahp_tutorial.md  data_dictionary.md  exclusion_output_schema.md  exclusion_rules.md  global_weights.md  scoring_requirements.md  tree_survivability_model_doc.md
datascience/exclusion_rules/: core_logic.ipynb  decision_tree_vs_rule_based.ipynb  define_function_signature.md  dummy_exclusion_rules.md
datascience/notebooks/: SSE11-Predicting-Tree-Survival-Rates-old.ipynb  farm_data_cleaning.ipynb  farms_eda.ipynb  growth_model_training.ipynb  imputation_model_training.ipynb  species_eda.ipynb  survivability_model.ipynb
datascience/src/: ahp_cli.py  gen_combined_epi_raw_scores.py  recommend_app.py
datascience/tests/: test_ahp_cli.py  test_ahp_core.py  test_dummy.py  test_exclusion_core_logic.py  test_exclusion_orm_compatibility.py  test_exclusion_rules_dependencies.py  test_exclusion_rules_scenarios.py  test_imputation_integration.py  test_ss_categorical_compatibility.py  test_ss_categorical_exact.py  test_ss_config.py  test_ss_numerical_range.py  test_ss_numerical_trapezoid.py  test_ss_orm_compatibility.py  test_ss_parse_prefs.py  test_ss_recommend.py  test_ss_recommend_orchestrators.py  test_ss_score.py  test_ss_score_farms_species.py  test_ss_subset_species.py  test_ss_utils.py  test_topographic_requirements.py
datascience/tree_survivability/: SSE11-Predicting-Tree-Survival-Rates.ipynb
gis/: .gitignore  README.md  pyproject.toml
gis/.ruff_cache/: .gitignore
gis/config/: settings.py
gis/core/: coverage_dummy.py  extract_data.py  farm_profile.py  gee_client.py  geometry_parser.py  new_feature.py  riparian.py
gis/docs/: README.md  output_schema.md
gis/notebook/: all_farm_environmental_factors.csv  eda_gee.ipynb  extract_environmental_factor_each_farm.ipynb  valid_check_environmental_factor_each_farm.ipynb
gis/sapling_estimation/: estimate.py  planting_points.py  rotation.py  slope_raster.py  slope_rules.py
gis/tests/: test_estimation.py  test_gis.py  test_planting_points.py  test_rotation.py  test_slope_raster.py  test_slope_rules.py
gis/utils/: build_farm_table.py
(+280 files in other folders)
