[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mermaid-cli>=0.1.2",
    "mpltern>=1.0.4",
    "nbconvert>=7.17.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pygam>=0.12.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "reportlab>=4.4.10",
    "ruff>=0.14.5",
    "scikit-learn>=1.7.2",
    "scipy<1.17",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]      

# Required for pyTest to find the modules
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = [
    "E",   # basic errors (spacing, syntax)
    "F",   # undefined variables, unused imports
    "I",   # import ordering (auto-fixable)
    "N",   # naming: snake_case, PascalCase, UPPER_SNAKE_CASE
]

[dependency-groups]
dev = []

