[project]
name = "gis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # GEE + Geospatial
    "earthengine-api>=1.0.0",
    "geopandas>=1.1.1",
    "shapely>=2.1.2",
    # Testing
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    # Linting
    "ruff>=0.14.5",
    # Environmental loading
    "python-dotenv>=1.0.1",
    "rasterio>=1.5.0",
    "numpy>=2.3.5",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
sapling_estimation = ["sampling_estimation/data/*"]

[tool.setuptools]
packages = ["core", "config", "sapling_estimation"]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
]

[dependency-groups]
dev = []
